# CREST

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
.venv312/: pyvenv.cfg
ai/: __init__.py
ai/agents/: classifier_agent.py
ai/embeddings/: embedder.py
ai/ner/: extractor.py
ai/providers/: groq.py
ai/rag/: __init__.py  ingest_dataset.py  knowledge_base.py  retriever.py
backend/: __init__.py  main.py  mock_store.py
backend/api/: analytics.py  complaints.py  insights.py
backend/models/: complaint.py  knowledge.py
backend/services/: complaint_service.py  spike_service.py
backend/utils/: db.py  init_db.py  logger.py  runtime.py  socket.py
backend/workers/: celery_app.py  ingest_worker.py  priority_worker.py  sla_worker.py  spike_worker.py
docs/: LOCAL_QUICK_TUNNEL_EMAIL_SETUP.md  RAG_IMPLEMENTATION_DEEP_DIVE.md  RAG_IMPLEMENTATION_REFERENCE.md  crest_architecture_guide.md  embeddings_explainer.md  session_report_march30.md  websocket_fix_explained.md
files/: CREST_DeepDive_Part1_Sections1to6.docx  CREST_DeepDive_Part2_Sections7to13.docx  ~$EST_DeepDive_Part1_Sections1to6.docx
frontend/nextjs-app/: next.config.js  package-lock.json  package.json  tailwind.config.js
infra/configs/: production.env  staging.env
integrations/: __init__.py
scripts/: seed_faqs.py  start_api.cmd  start_cloudflare_tunnel.cmd  start_email_listener.cmd  start_frontend.cmd
tests/: test_ingest_logic_only.py  test_rag_grounding.py  test_rag_highlighting.py  test_spike_detection.py
(+29 files in other folders)
