[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "crest"
version = "1.0.0"
description = "CREST — Complaint Resolution & Escalation Smart Technology"
requires-python = ">=3.12"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "ai*", "integrations*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
